# CozyCode

./: .gitignore  LICENSE  README.md
docs/: Writing-Extensions.md
examples/hello-cozy/: cozy.json  index.html
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_cmds.rs  ext_cmds.rs  exthost.js  exthost_cmds.rs  fs_cmds.rs  gh_cmds.rs  git_cmds.rs  main.rs  misc_cmds.rs  proc_cmds.rs  pty_cmds.rs  search_cmds.rs  ssh_cmds.rs  sys_cmds.rs  tunnel_cmds.rs  util.rs
